--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -21,7 +21,9 @@
     <div class="content">
       <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
       <div class="input">
-        <input type="text">
+        <label>
+          <input type="text">
+        </label>
       </div>
       <div class="buttons">
         <button>Do the thing!</button>
